On Mac open the password bubble even if the current one is being destroyed.

It can happen when OS reauth is required. Sequence of events:
- user clicks the eye icon.
- the reuth dialog pops up blocking the message loop for Chrome.
- the user types something so the bubble looses focus. Thus, the bubble is to be closed.
- the reauth dialog is closed.
- Chrome schedules an event to pop up the bubble again.
- The old bubble gets a message about focus lost and starts closing (1).
- Chrome wants to reopen the bubble. (2)
- The old bubble is finally closed (i.e. destructed).

Before the CL (2) was blocked because the bubble is still alive.
As a side effect we have to reset the bubble model earlier so that the metrics recorder feels good.
Otherwise, it can't understand how the second bubble opens before one is still alive.

Bug: 803411
Change-Id: I0f2574bde52b832492d44aec8efc9353db4c5881
Reviewed-on: https://chromium-review.googlesource.com/876008
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Dominic Battré <battre@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530874}
Former-commit-id: 85b9d0662601895ecb6b25977ce3117725d0d525